<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/background_light"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/top"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/top"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/seja_bem_vindo_a_coordenador_a"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/username"
        android:layout_marginTop="16dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="8dp"
        android:autofillHints="password" />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edittext_password"
        android:layout_marginTop="24dp"
        android:text="@string/entrar"
        android:textSize="16sp"
        android:background="@drawable/buttons"        android:onClick="login" />

    <ImageView
        android:id="@+id/imageview_logo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:src="@drawable/logo_academico"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

</RelativeLayout>
